Update app name to 'KIMIOTO now'
Changed app display name across all platforms:

1. Android Configuration:
   - Created android/app/src/main/res/values/strings.xml
   - Set app_name to 'KIMIOTO now'
   - Updated AndroidManifest.xml to use @string/app_name reference

2. iOS Configuration:
   - Updated CFBundleDisplayName to 'KIMIOTO now'
   - Updated CFBundleName to 'KIMIOTO now'

3. Web Configuration:
   - Updated index.html title to 'KIMIOTO now'
   - Updated meta description
   - Updated apple-mobile-web-app-title
   - Updated manifest.json name and short_name
   - Updated manifest.json description

4. Project Configuration:
   - Updated pubspec.yaml description to include 'KIMIOTO now'

The app name will now display as 'KIMIOTO now' on:
- Android home screen and app drawer
- iOS home screen
- Web browser tab
- System settings and app lists

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: local_beat
-description: "地域の若者向け地域メディア × イベント × チケットアプリ"
+description: "KIMIOTO now - 地域の若者向け地域メディア × イベント × チケットアプリ"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
