--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,8 +39,8 @@ dependencies:
   
   # Local Storage
   shared_preferences: 2.5.3
-  hive: 2.2.3
-  hive_flutter: 1.1.0
+  #   hive: 2.2.3
+  #   hive_flutter: 1.1.0
   
   # QR Code
   qr_flutter: ^4.1.0
